feat: update dependencies and integrate Bootstrap with Tailwind CSS
- Added Bootstrap and Tailwind CSS dependencies in package.json
- Imported Bootstrap CSS and JS in App.jsx
- Updated Hero_background component with a new image
- Modified Navbar component to use Bootstrap for styling
- Adjusted Navbar styles in Navbar.module.css
- Enhanced Ranking component with new heading styles
- Updated CSS for Ranking component for better visuals
- Increased height of Hero_background component

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -2,10 +2,15 @@
   display: flex;
   justify-content: space-around;
   margin-top: 16px;
+  font-family: sans-serif;
+  height: 40px;
+  align-items: center;
+  background-color: #dfe3e6;
 }
 
 .anchor{
   text-decoration: none;
-  color: rgb(5, 5, 5);
   font-weight: 700;
+  font-size: large;
+  color: rgb(71, 68, 69);
 }
