--- a/src/components/Hero_background.module.css
+++ b/src/components/Hero_background.module.css
@@ -1,5 +1,5 @@
 .div{
-  height: 200px;
+  height: 240px;
   background-image: url('/photos/hero_background.jpeg');
   width: 100%;
   object-fit: fill;
@@ -7,7 +7,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 24px;
+  margin: 24px 0px;
   position: relative;
 }
 
