--- a/src/components/Ranking.module.css
+++ b/src/components/Ranking.module.css
@@ -1,6 +1,8 @@
 .container{
   margin-top: 16px;
   margin-left: 16px;
+  font-family: sans-serif;
+  color: rgb(4, 9, 113);
 }
 
 .subcontainer{
@@ -13,11 +15,22 @@
 .image{
   height: 240px;
   width: 240px;
-  border: 2px solid black;
 }
 
 .img{
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.heading{
+   font-family: sans-serif;
+   background-color: rgb(227, 229, 229);
+   color: rgb(83, 84, 82);
+   text-transform: capitalize;
+   font-weight: 800;
+   font-size: 32px;
+   padding: 8px;
+   display: flex;
+   justify-content: center;
 }
