--- a/src/components/Hero_background.module.css
+++ b/src/components/Hero_background.module.css
@@ -13,10 +13,13 @@
 
 
 .p1{
-   color: white;
+   color: rgb(74, 69, 69);
    font-family: sans-serif;
    font-weight: 1000;
    font-size: 50px;
    text-transform: capitalize;
 }
 
+.p2{
+  font-size: 20px;
+}
