--- a/src/components/Ranking.module.css
+++ b/src/components/Ranking.module.css
@@ -3,13 +3,25 @@
   margin-left: 16px;
   font-family: sans-serif;
   color: rgb(4, 9, 113);
+
 }
 
 .subcontainer{
   display: flex;
-  gap: 20px;
+  gap: 50px;
   overflow-x: auto;
   white-space: nowrap;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  padding: 24px;
+}
+
+
+.card {
+  border-radius: 50px;
+background: #e0e0e0;
+box-shadow:  22px 22px 45px #a8a7a7,
+             -22px -22px 45px #ffffff;
 }
 
 .image{
@@ -17,10 +29,20 @@
   width: 240px;
 }
 
+
+
 .img{
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
+}
+
+.cardDetails{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .heading{
