fix: update background image path in Hero_background component for correct loading

--- a/src/components/Hero_background.module.css
+++ b/src/components/Hero_background.module.css
@@ -1,6 +1,6 @@
 .div{
   height: 240px;
-  background-image: url('/photos/hero_background.jpeg');
+  background-image: url('/hero_background.jpeg');
   width: 100%;
   object-fit: fill;
   display: flex;
