--- a/src/components/Ranking.module.css
+++ b/src/components/Ranking.module.css
@@ -1,6 +1,5 @@
 .container{
   margin-top: 16px;
-  margin-left: 16px;
   font-family: sans-serif;
   color: rgb(4, 9, 113);
 
@@ -29,8 +28,6 @@ box-shadow:  22px 22px 45px #a8a7a7,
   width: 240px;
 }
 
-
-
 .img{
   width: 100%;
   height: 100%;
@@ -51,7 +48,7 @@ box-shadow:  22px 22px 45px #a8a7a7,
    color: rgb(83, 84, 82);
    text-transform: capitalize;
    font-weight: 800;
-   font-size: 32px;
+   font-size: 3vw;
    padding: 8px;
    display: flex;
    justify-content: center;
